<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.iths.fu_nsa.MainActivity" >

    <Button
        android:id="@+id/decryptBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="encryptBtnClicked"
        android:text="@string/encrypt" />

    <EditText
        android:id="@+id/clearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encryptBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/decryptBtn"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/ClearTextHere"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/encryptedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/encryptBtn"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/EncryptedTextHere"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/encryptBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:onClick="decryptBtnClicked"
        android:text="@string/decrypt" />

    <Button
        android:id="@+id/saveBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/encryptedText"
        android:layout_alignRight="@+id/encryptedText"
        android:onClick="saveBtnClicked"
        android:text="@string/save_encoded_text" />

</RelativeLayout>